done some work on detail section

--- a/index.html
+++ b/index.html
@@ -274,30 +274,207 @@
                 </div>
             </form>
         </div>
-
-    </div>
-
-
-    <div class="topbarMobile">
-        <div class="bottomBar">
-            <div class="caddy">
-                <div class="caddy-element element--borderBottom">
-                    <span class="element__icon icon-wallet"></span>
-                    <span class="element__cash">$1,500.00</span>
-                    <span class="element__icon icon--borderRight icon-arrow-down-small"></span>
-                    <span class="element__icon icon-notification"></span>
+        <div class="general">
+            <div class="text">
+                <h3>DETAIL STATISTIC</h3>
+            </div>
+            <div class="date">
+                <div class="boxDate">
+                    <div class="boxDate__start">16.05.2016</div>
+                    <div class="boxDate__split"></div>
+                    <div class="boxDate__finish">16.05.2016</div>
+                    <span class="boxDate__icon icon-calendar"></span>
                 </div>
-                <div class="caddy-element">
-                    <span class="element__icon icon-profile"></span>
-                    <span class="element__username">Leonardo Dicaprio</span>
-                    <span class="element__icon icon--borderLeft icon-quit"></span>
-                </div>
-
+                <span class="date__icon icon-refresh"></span>
+            </div>
+            <div class="detail">
+                <table class="detail-table">
+                    <tr class="detail-row">
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>Tracker name</h4>
+                            </div>
+                        </th>
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>Initiated date</h4>
+                            </div>
+                        </th>
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>Visits</h4>
+                            </div>
+                        </th>
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>Unique</h4>
+                            </div>
+                        </th>
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>Singups</h4>
+                            </div>
+                        </th>
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>FTD</h4>
+                            </div>
+                        </th>
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>Depositors</h4>
+                            </div>
+                        </th>
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>Deposits ($)</h4>
+                            </div>
+                        </th>
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>Payout ($)</h4>
+                            </div>
+                        </th>
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>Turnover</h4>
+                            </div>
+                        </th>
+                        <th class="table-head">
+                            <div class="btn-box btn">
+                                <h4>Deal</h4>
+                            </div>
+                        </th>
+                    </tr>
+                    <tr class="detail-row" id="detail-row">
+                        <td class="detail__text">aff/sam_test</td>
+                        <td class="detail__text">17/08/02 (12:58)</td>
+                        <td class="detail__text">232</td>
+                        <td class="detail__text">114</td>
+                        <td class="detail__text">12</td>
+                        <td class="detail__text">6</td>
+                        <td class="detail__text">3</td>
+                        <td class="detail__text">34,425.00</td>
+                        <td class="detail__text">234.00</td>
+                        <td class="detail__text">421.342.00</td>
+                        <td class="detail__text">cpl (200)</td>
+                    </tr>
+                    <tr class="detail-row" id="detail-row">
+                        <td class="detail__text">aff/leo_test</td>
+                        <td class="detail__text">15/08/02 (12:58)</td>
+                        <td class="detail__text">232</td>
+                        <td class="detail__text">114</td>
+                        <td class="detail__text">12</td>
+                        <td class="detail__text">6</td>
+                        <td class="detail__text">3</td>
+                        <td class="detail__text">34,425.00</td>
+                        <td class="detail__text">234.00</td>
+                        <td class="detail__text">421.342.00</td>
+                        <td class="detail__text">cpl (200)</td>
+                    </tr>
+                    <tr class="detail-row" id="detail-row">
+                        <td class="detail__text">aff/sam_test</td>
+                        <td class="detail__text">17/08/02 (12:58)</td>
+                        <td class="detail__text">112</td>
+                        <td class="detail__text">100</td>
+                        <td class="detail__text">22</td>
+                        <td class="detail__text">4</td>
+                        <td class="detail__text">3</td>
+                        <td class="detail__text">22,415.00</td>
+                        <td class="detail__text">341.00</td>
+                        <td class="detail__text">522.342.00</td>
+                        <td class="detail__text">cpl (200)</td>
+                    </tr>
+                    <tr class="detail-row" id="detail-row">
+                        <td class="detail__text">aff/leo_test</td>
+                        <td class="detail__text">33/08/02 (12:58)</td>
+                        <td class="detail__text">232</td>
+                        <td class="detail__text">114</td>
+                        <td class="detail__text">12</td>
+                        <td class="detail__text">6</td>
+                        <td class="detail__text">3</td>
+                        <td class="detail__text">34,425.00</td>
+                        <td class="detail__text">234.00</td>
+                        <td class="detail__text">421.342.00</td>
+                        <td class="detail__text">cpl (200)</td>
+                    </tr>
+                    <tr class="detail-row" id="detail-row">
+                        <td class="detail__text">aff/sam_test</td>
+                        <td class="detail__text">17/08/02 (12:58)</td>
+                        <td class="detail__text">112</td>
+                        <td class="detail__text">100</td>
+                        <td class="detail__text">22</td>
+                        <td class="detail__text">4</td>
+                        <td class="detail__text">3</td>
+                        <td class="detail__text">22,415.00</td>
+                        <td class="detail__text">341.00</td>
+                        <td class="detail__text">522.342.00</td>
+                        <td class="detail__text">cpl (200)</td>
+                    </tr>
+                    <tr class="detail-row" id="detail-row">
+                        <td class="detail__text">aff/leo_test</td>
+                        <td class="detail__text">13/08/02 (12:58)</td>
+                        <td class="detail__text">232</td>
+                        <td class="detail__text">114</td>
+                        <td class="detail__text">12</td>
+                        <td class="detail__text">6</td>
+                        <td class="detail__text">3</td>
+                        <td class="detail__text">34,425.00</td>
+                        <td class="detail__text">234.00</td>
+                        <td class="detail__text">421.342.00</td>
+                        <td class="detail__text">cpl (200)</td>
+                    </tr>
+                    <tr class="detail-row" id="detail-row">
+                        <td class="detail__text">aff/sam_test</td>
+                        <td class="detail__text">17/08/02 (12:58)</td>
+                        <td class="detail__text">112</td>
+                        <td class="detail__text">100</td>
+                        <td class="detail__text">22</td>
+                        <td class="detail__text">4</td>
+                        <td class="detail__text">3</td>
+                        <td class="detail__text">22,415.00</td>
+                        <td class="detail__text">341.00</td>
+                        <td class="detail__text">522.342.00</td>
+                        <td class="detail__text">cpl (200)</td>
+                    </tr>
+                    <tr class="detail-row" id="detail-row">
+                        <td class="detail__text">aff/leo_test</td>
+                        <td class="detail__text">19/08/02 (12:58)</td>
+                        <td class="detail__text">232</td>
+                        <td class="detail__text">111</td>
+                        <td class="detail__text">12</td>
+                        <td class="detail__text">6</td>
+                        <td class="detail__text">3</td>
+                        <td class="detail__text">34,425.00</td>
+                        <td class="detail__text">234.00</td>
+                        <td class="detail__text">421.342.00</td>
+                        <td class="detail__text">cpl (200)</td>
+                    </tr>
+                </table>
             </div>
         </div>
-    </div>
 
-    <script src="js/script.js"></script>
+
+        <div class="topbarMobile">
+            <div class="bottomBar">
+                <div class="caddy">
+                    <div class="caddy-element element--borderBottom">
+                        <span class="element__icon icon-wallet"></span>
+                        <span class="element__cash">$1,500.00</span>
+                        <span class="element__icon icon--borderRight icon-arrow-down-small"></span>
+                        <span class="element__icon icon-notification"></span>
+                    </div>
+                    <div class="caddy-element">
+                        <span class="element__icon icon-profile"></span>
+                        <span class="element__username">Leonardo Dicaprio</span>
+                        <span class="element__icon icon--borderLeft icon-quit"></span>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <script src="js/script.js"></script>
 </body>
 
 </html>
