--- a/styleguide.html
+++ b/styleguide.html
@@ -10,7 +10,7 @@
 
 
 <html>
-    <body>
+    <body style="display: flex; justify-content: center; align-items: center; flex-direction: column">
         
         <!--    NAVBAR    -->
         <nav class="navbar" id="navbar">
@@ -67,12 +67,15 @@
         </div>
 
             <!--  BOXDATE  -->
-        <div class="boxDate">
-                <div class="boxDate__start">16.05.2016</div>
-                <div class="boxDate__split"></div>
-                <div class="boxDate__finish">16.05.2016</div>
-                <span class="boxDate__icon icon-calendar"></span>
-            </div>
+            <div class="date">
+                    <div class="boxDate">
+                        <div class="boxDate__start">16.05.2016</div>
+                        <div class="boxDate__split"></div>
+                        <div class="boxDate__finish">16.05.2016</div>
+                        <span class="boxDate__icon icon-calendar"></span>
+                    </div>
+                    <span class="date__icon icon-refresh"></span>
+                </div>
 
             <!-- BTN -->
             <div class="btn">
