--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <tr class="detail-row">
                         <th class="table-head">
                             <div class="btn-box btn">
-                                <h4>Tracker name</h4>
+                                <h4>Tracker name</h4><i class="icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
@@ -451,7 +451,21 @@
                         <td class="detail__text">cpl (200)</td>
                     </tr>
                 </table>
+                <div class="pager">
+                    <a href="">&#60;</a>
+                    <a href="">1</a>
+                    <a href="">2</a>
+                    <a href="">3</a>
+                    <a href="">4</a>
+                    <a href="">5</a>
+                    <a href="">6</a>
+                    <a href="">7</a>
+                    <a href="">8</a>
+                    <a href="">9</a>
+                    <a href="">&#62;</a>
+                </div>
             </div>
+
         </div>
 
 
@@ -473,8 +487,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <script src="js/script.js"></script>
 
-        <script src="js/script.js"></script>
 </body>
 
 </html>
