--- a/index.html
+++ b/index.html
@@ -292,57 +292,68 @@
                     <tr class="detail-row">
                         <th class="table-head">
                             <div class="btn-box btn">
-                                <h4>Tracker name</h4><i class="icon-arrow-up"></i>
+                                <h4>Tracker name</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
                             <div class="btn-box btn">
                                 <h4>Initiated date</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
                             <div class="btn-box btn">
                                 <h4>Visits</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
                             <div class="btn-box btn">
                                 <h4>Unique</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
                             <div class="btn-box btn">
                                 <h4>Singups</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
                             <div class="btn-box btn">
                                 <h4>FTD</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
                             <div class="btn-box btn">
                                 <h4>Depositors</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
                             <div class="btn-box btn">
                                 <h4>Deposits ($)</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
                             <div class="btn-box btn">
                                 <h4>Payout ($)</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
                             <div class="btn-box btn">
                                 <h4>Turnover</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                         <th class="table-head">
                             <div class="btn-box btn">
                                 <h4>Deal</h4>
+                                <i class="header__icon icon-arrow-up"></i>
                             </div>
                         </th>
                     </tr>
@@ -451,19 +462,19 @@
                         <td class="detail__text">cpl (200)</td>
                     </tr>
                 </table>
-                <div class="pager">
-                    <a href="">&#60;</a>
-                    <a href="">1</a>
-                    <a href="">2</a>
-                    <a href="">3</a>
-                    <a href="">4</a>
-                    <a href="">5</a>
-                    <a href="">6</a>
-                    <a href="">7</a>
-                    <a href="">8</a>
-                    <a href="">9</a>
-                    <a href="">&#62;</a>
-                </div>
+                <ul class="pager">
+                    <li class="pager__item"><a href="">&#60;</a></li>
+                    <li class="pager__item active"><a href="">1</a></li>
+                    <li class="pager__item"><a href="">2</a></li>
+                    <li class="pager__item"><a href="">3</a></li>
+                    <Li class="pager__item"><a href="">4</a></Li>
+                    <li class="pager__item"><a href="">5</a></li>
+                    <li class="pager__item"><a href="">6</a></li>
+                    <li class="pager__item"><a href="">7</a></li>
+                    <li class="pager__item"><a href="">8</a></li>
+                    <li class="pager__item"><a href="">9</a></li>
+                    <Li class="pager__item"><a href="">&#62;</a></Li>
+                </ul>
             </div>
 
         </div>
