finished up payout history section

--- a/index.html
+++ b/index.html
@@ -479,6 +479,113 @@
 
         </div>
 
+        <div class="general">
+            <div class="text">
+                <h3>PAYOUT HISTORY</h3>
+            </div>
+            <div class="date">
+                <div class="boxDate">
+                    <div class="boxDate__start">16.05.2016</div>
+                    <div class="boxDate__split"></div>
+                    <div class="boxDate__finish">16.05.2016</div>
+                    <span class="boxDate__icon icon-calendar"></span>
+                </div>
+                <span class="date__icon icon-refresh"></span>
+            </div>
+            <div class="payout">
+                <table class="payout-table">
+                    <tr class="payout-row">
+                        <th class="payout-head">
+                            <div class="payout-btn btn">
+                                <h4>Date</h4>
+                                <i class="header__icon icon-arrow-up"></i>
+                            </div>
+                        </th>
+                        <th class="payout-head">
+                            <div class="payout-btn btn">
+                                <h4>Amount ($)</h4>
+                                <i class="header__icon icon-arrow-up"></i>
+                            </div>
+                        </th>
+                        <th class="payout-head">
+                            <div class="payout-btn btn">
+                                <h4>Deal</h4>
+                                <i class="header__icon icon-arrow-up"></i>
+                            </div>
+                        </th>
+                        <th class="payout-head">
+                            <div class="payout-btn btn">
+                                <h4>Account</h4>
+                                <i class="header__icon icon-arrow-up"></i>
+                            </div>
+                        </th>
+
+                    </tr>
+                    <tr class="payout-row" id="payout-row">
+                        <td class="payout__text">17/08/02 (12:58)</td>
+                        <td class="payout__text">34,425.00</td>
+                        <td class="payout__text">cpl (200)</td>
+                        <td class="payout__text">bank</td>
+                    </tr>
+                    <tr class="payout-row" id="payout-row">
+                        <td class="payout__text">15/08/02 (12:58)</td>
+                        <td class="payout__text">34,425.00</td>
+                        <td class="payout__text">cpl (200)</td>
+                        <td class="payout__text">bank</td>
+                    </tr>
+                    <tr class="payout-row" id="payout-row">
+                        <td class="payout__text">17/08/02 (12:58)</td>
+                        <td class="payout__text">22,415.00</td>
+                        <td class="payout__text">cpl (200)</td>
+                        <td class="payout__text">bank</td>
+                    </tr>
+                    <tr class="payout-row" id="payout-row">
+                        <td class="payout__text">33/08/02 (12:58)</td>
+                        <td class="payout__text">34,425.00</td>
+                        <td class="payout__text">cpl (200)</td>
+                        <td class="payout__text">bank</td>
+                    </tr>
+                    <tr class="payout-row" id="payout-row">
+                        <td class="payout__text">17/08/02 (12:58)</td>
+                        <td class="payout__text">22,415.00</td>
+                        <td class="payout__text">cpl (200)</td>
+                        <td class="payout__text">bank</td>
+                    </tr>
+                    <tr class="payout-row" id="payout-row">
+                        <td class="payout__text">13/08/02 (12:58)</td>
+                        <td class="payout__text">34,425.00</td>
+                        <td class="payout__text">cpl (200)</td>
+                        <td class="payout__text">bank</td>
+                    </tr>
+                    <tr class="payout-row" id="payout-row">
+                        <td class="payout__text">17/08/02 (12:58)</td>
+                        <td class="payout__text">22,415.00</td>
+                        <td class="payout__text">cpl (200)</td>
+                        <td class="payout__text">bank</td>
+                    </tr>
+                    <tr class="payout-row" id="payout-row">
+                        <td class="payout__text">19/08/02 (12:58)</td>
+                        <td class="payout__text">34,425.00</td>
+                        <td class="payout__text">cpl (200)</td>
+                        <td class="payout__text">bank</td>
+                    </tr>
+                </table>
+                <ul class="pager">
+                    <li class="pager__item"><a href="">&#60;</a></li>
+                    <li class="pager__item active"><a href="">1</a></li>
+                    <li class="pager__item"><a href="">2</a></li>
+                    <li class="pager__item"><a href="">3</a></li>
+                    <Li class="pager__item"><a href="">4</a></Li>
+                    <li class="pager__item"><a href="">5</a></li>
+                    <li class="pager__item"><a href="">6</a></li>
+                    <li class="pager__item"><a href="">7</a></li>
+                    <li class="pager__item"><a href="">8</a></li>
+                    <li class="pager__item"><a href="">9</a></li>
+                    <Li class="pager__item"><a href="">&#62;</a></Li>
+                </ul>
+            </div>
+        </div>
+
 
         <div class="topbarMobile">
             <div class="bottomBar">
