--- a/styleguide.html
+++ b/styleguide.html
@@ -151,4 +151,18 @@
                         </div>
                     </form>
                 </div>
+                <!-- PAGINATION-->
+                <ul class="pager">
+                    <li class="pager__item"><a href="">&#60;</a></li>
+                    <li class="pager__item active"><a href="">1</a></li>
+                    <li class="pager__item"><a href="">2</a></li>
+                    <li class="pager__item"><a href="">3</a></li>
+                    <Li class="pager__item"><a href="">4</a></Li>
+                    <li class="pager__item"><a href="">5</a></li>
+                    <li class="pager__item"><a href="">6</a></li>
+                    <li class="pager__item"><a href="">7</a></li>
+                    <li class="pager__item"><a href="">8</a></li>
+                    <li class="pager__item"><a href="">9</a></li>
+                    <Li class="pager__item"><a href="">&#62;</a></Li>
+                </ul>
 </body>
